# hill

./: .gitmodules  CMakeLists.txt  CMakePresets.json
assets/cube/: cube.glb  cube.mtl
cmake/: options.cmake  sanity_checks.cmake  target_options.cmake
hill/: CMakeLists.txt
hill/cmake/: assimp.cmake  imgui.cmake  imguizmo.cmake  stb_image.cmake
hill/include/hill/: aabb.hpp  camera.hpp  debug.hpp  editor.hpp  editor_common.hpp  environment.hpp  file.hpp  glm.h++  hill.hpp  image.hpp  imgui.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  primitives_registry.hpp  renderer.hpp  renderer_command.hpp  renderer_common.hpp  scene.hpp  shader_assembler.hpp  task_manager.hpp  windowing.hpp  windowing_system.hpp
hill/include/hill/primitives/: shader.hpp  texture2d.hpp  texture_2d.hpp  texture_cubemap.hpp  vertex_array.hpp
hill/src/: debug.cpp  editor.cpp  file.cpp  hill.cpp  image.cpp  material.cpp  mesh.cpp  model.cpp  primitives_registry.cpp  renderer.cpp  renderer_command.cpp  renderer_common.cpp  scene.cpp  shader_assembler.cpp  task_manager.cpp
hill/src/primitives/: element_buffer.cpp  shader.cpp  texture2d.cpp  texture_2d.cpp  texture_cubemap.cpp  vertex_array.cpp  vertex_buffer.cpp
shaders/: basic.frag  basic.vert  debug.frag  debug.vert  frag_common.glsl  phong.frag  phong.vert  skybox.frag  skybox.vert  vert_common.glsl
tests/: CMakeLists.txt
tests/sdl/: CMakeLists.txt
tests/sdl/cmake/: imgui.cmake  sdl.cmake
tests/sdl/src/: main.cpp  sdl_example.cpp  sdl_example.hpp
